syntax = "proto3";
package nebula.ido;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "nebula/ido/ido.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nghuyenthevinh2000/nebula/x/ido/types";

// Msg defines the Msg service.
service Msg {
    rpc EnableIDO(MsgEnableIDORequest) returns (MsgEnableIDOResponse);

    rpc CommitParticipation(MsgCommitParticipationRequest) returns (MsgCommitParticipationResponse);
}

// ====== MessageEnableIDO
message MsgEnableIDORequest {
    string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

    // Project unique id of each project
    uint64 project_id = 2 [
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    repeated cosmos.base.v1beta1.Coin token_for_distribution = 3 [
        (gogoproto.moretags) = "yaml:\"token_for_distribution\"",
        (gogoproto.nullable) = false,
        (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
    ];

    repeated cosmos.base.v1beta1.Coin token_listing_price = 4 [
        (gogoproto.moretags) = "yaml:\"token_listing_price\"",
        (gogoproto.nullable) = false,
        (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
    ];

    repeated AllocationLimit allocation_limit = 5 [
        (gogoproto.moretags) = "yaml:\"allocation_limit\"",
        (gogoproto.nullable) = false
    ];

    // Begin time for this ido
    google.protobuf.Timestamp start_time = 6 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"start_time\""
    ];
}

message MsgEnableIDOResponse {}

// ====== MessageCommitParticipation

message MsgCommitParticipationRequest {

    string participant = 1 [ (gogoproto.moretags) = "yaml:\"participant\"" ];

    repeated cosmos.base.v1beta1.Coin token_commit = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
        (gogoproto.moretags) = "yaml:\"token_commit\""
    ];

    uint64 project_id = 3 [
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

}

message MsgCommitParticipationResponse {}